--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 		<link rel="stylesheet" type="text/css" href="style.css" />
 	</head>
 	<body>
+		<!-- Header Bar -->
 		<header>
 			<ul>
 				<li><a href="index.html">About Me</a></li>
@@ -14,5 +15,14 @@
 				<li><a href="contact.html">Contact</a></li>
 			</ul>
 		</header>
+
+		<!-- About Content -->
+		<section id="WhoAmI"></section>
+
+		<!-- Schooling -->
+		<section id="Schooling"></section>
+
+		<!-- Footer -->
+		<footer></footer>
 	</body>
 </html>
