--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 	<head>
 		<!-- Home page to lead people too -->
 		<title>About Me</title>
-		<link rel="stylesheet" type="text/css" href="style.css" />
+		<link rel="stylesheet" type="text/css" href="resources/css/style.css" />
 	</head>
 	<body>
 		<!-- Header Bar -->
