--- a/index.html
+++ b/index.html
@@ -17,7 +17,16 @@
 		</header>
 
 		<!-- About Content -->
-		<section id="WhoAmI"></section>
+		<section id="WhoAmI">
+			<div class="image-container">
+				<img src="resources/images/Profile.jpg" alt="Profile Picture" />
+			</div>
+			<div class="text-container">
+				<h1>About Me</h1>
+				<p>
+					My name is Jaxton Gray. I am a first year master student at the University of Calgary.
+				</p>
+		</section>
 
 		<!-- Schooling -->
 		<section id="Schooling"></section>
