--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 		</header>
 
 		<!-- About Content -->
-		<section id="WhoAmI">
+		<section id="whoami">
 			<div class="image-container">
 				<img src="resources/images/Profile.jpg" alt="Profile Picture" />
 			</div>
@@ -29,9 +29,41 @@
 		</section>
 
 		<!-- Schooling -->
-		<section id="Schooling"></section>
+		<section id="schooling">
+			<h1>Schooling</h1>
+			<div class="undergrad">
+				<h2>Bachelor's of Science</h2>
+				<p>
+					I graduated from the University of Calgary in 2024 with a 
+					bachelor's of science in Geography. 
+				</p>
+			</div>
+			<div class="masters">
+				<h2>Master's of Science</h2>
+				<p>
+					I am currently working on my master's of science in Geography at the University of Calgary.
+				</p>
+			</div>
+		</section>
+
+		<!-- Work -->
+		<section id="Work">
+			<h1>Work</h1>
+			<div class="student-researcher">
+				<h2>Student Researcher</h2>
+				<p>
+					I have been a student researcher under Dr. Tricia Stadnyk since March 2023. I do a variety of tasks which are not limited to: 
+					data collection, data analysis, and report writing.
+
+				</p>
+			</div>
+		</section>
 
 		<!-- Footer -->
-		<footer></footer>
+		<footer>
+			<p>
+				Website created by Jaxton Gray (me!) and hosted on GitHub Pages.
+			</p>
+		</footer>
 	</body>
 </html>
