--- a/index.html
+++ b/index.html
@@ -3,17 +3,19 @@
 	<head>
 		<!-- Home page to lead people too -->
 		<title>About Me</title>
-		<link rel="stylesheet" type="text/css" href="resources/css/style.css" />
+		<link rel="stylesheet" type="text/css" href="./css/style.css" />
 	</head>
 	<body>
 		<!-- Header Bar -->
 		<header>
-			<ul>
-				<li><a href="index.html">About Me</a></li>
-				<li><a href="projects.html">Projects</a></li>
-				<li><a href="skills.html">Skills</a></li>
-				<li><a href="contact.html">Contact</a></li>
-			</ul>
+			<nav>
+				<ul>
+					<li><a href="index.html">About Me</a></li>
+					<li><a href="projects.html">Projects</a></li>
+					<li><a href="skills.html">Skills</a></li>
+					<li><a href="contact.html">Contact</a></li>
+				</ul>
+			</nav>
 		</header>
 
 		<!-- About Content -->
@@ -24,46 +26,47 @@
 			<div class="text-container">
 				<h1>About Me</h1>
 				<p>
-					My name is Jaxton Gray. I am a first year master student at the University of Calgary.
+					My name is Jaxton Gray. I am a first year master student at the
+					University of Calgary.
 				</p>
+			</div>
 		</section>
 
 		<!-- Schooling -->
 		<section id="schooling">
-			<h1>Schooling</h1>
+			<h2>Schooling</h2>
 			<div class="undergrad">
-				<h2>Bachelor's of Science</h2>
+				<h3>Bachelor's of Science</h3>
 				<p>
-					I graduated from the University of Calgary in 2024 with a 
-					bachelor's of science in Geography. 
+					I graduated from the University of Calgary in 2024 with a bachelor's
+					of science in Geography.
 				</p>
 			</div>
 			<div class="masters">
-				<h2>Master's of Science</h2>
+				<h3>Master's of Science</h3>
 				<p>
-					I am currently working on my master's of science in Geography at the University of Calgary.
+					I am currently working on my master's of science in Geography at the
+					University of Calgary.
 				</p>
 			</div>
 		</section>
 
 		<!-- Work -->
 		<section id="Work">
-			<h1>Work</h1>
+			<h2>Work</h2>
 			<div class="student-researcher">
-				<h2>Student Researcher</h2>
+				<h3>Student Researcher</h3>
 				<p>
-					I have been a student researcher under Dr. Tricia Stadnyk since March 2023. I do a variety of tasks which are not limited to: 
-					data collection, data analysis, and report writing.
-
+					I have been a student researcher under Dr. Tricia Stadnyk since March
+					2023. I do a variety of tasks which are not limited to: data
+					collection, data analysis, and report writing.
 				</p>
 			</div>
 		</section>
 
 		<!-- Footer -->
 		<footer>
-			<p>
-				Website created by Jaxton Gray (me!) and hosted on GitHub Pages.
-			</p>
+			<p>Website created by Jaxton Gray (me!) and hosted on GitHub Pages.</p>
 		</footer>
 	</body>
 </html>
