some more edits and testing script

--- a/index.html
+++ b/index.html
@@ -68,5 +68,8 @@
 		<footer>
 			<p>Website created by Jaxton Gray (me!) and hosted on GitHub Pages.</p>
 		</footer>
+		
+		<!-- JavaScript -->
+		<script type="text/javascript" src="./javascript/script.js"></script>
 	</body>
 </html>
