--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 		<!-- Home page to lead people too -->
 		<title>About Me</title>
 		<link rel="stylesheet" type="text/css" href="./css/style.css" />
+		<link rel="stylesheet" type="text/css" href="./css/aboutme.css" />
 	</head>
 	<body>
 		<!-- Header Bar -->
@@ -21,10 +22,10 @@
 		<!-- About Content -->
 		<section id="whoami">
 			<div class="image-container">
+				<h1>About Me</h1>
 				<img src="resources/images/Profile.jpg" alt="Profile Picture" />
 			</div>
 			<div class="text-container">
-				<h1>About Me</h1>
 				<p>
 					My name is Jaxton Gray. I am a first year master student at the
 					University of Calgary.
